base/src/test/resources/failure/struct/field-type-mismatch.aya.txt
In file $FILE:14:30 ->

  12 | 
  13 | def test-nat-pair : Pair Nat Nat =>
  14 |   new Pair Nat Nat { | fst => make-pair Nat Nat zero zero | snd => suc zero }
                                     ^-------------------------^

Error: Cannot check the expression of type
         Pair Nat Nat
       against the type
         Nat

1 error(s), 0 warning(s).
What are you doing?
